--- a/tutorial/forward-2D.ipynb
+++ b/tutorial/forward-2D.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "**d** is the perpendicular distance from the point $(z, x)$ to the boundary between original and extended domain;\n",
     "\n",
-    "**e** is a polinomial degree (we used cubic in this example).\n",
+    "**e** is a polynomial degree (we used cubic in this example).\n",
     "\n",
     "More details in: **Y. Gao et al. Comparison of artificial absorbing boundaries for acoustic wave equation modelling, Exploration Geophysics (2017) 76–93.** "
    ]
